--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 		    <div class="tab">
 		        <button class="tablinks" onclick="openLogin(event, 'KV')" id="kodevoucher">Voucher</button>
 	            <button class="tablinks" onclick="openLogin(event, 'UP')" id="userpass">Member</button>
-                <button id="qr" class="tablinks" onclick="window.location='https://rahman9868.github.io/QR/';">QR</button>
+                <button id="qr" class="tablinks" onclick="window.location='https://rahman9868.github.io/QR';">QR</button>
                 <button class="tablinks" onclick="openLogin(event, 'RG-BILLING')" id="daftarBilling">Daftar Billing</button>
 	        </div>
 
